# Topology-Generator

./: .gitignore  Challenges.txt  README.md  pyproject.toml
src/: main.py
src/Data_Cleaner/: CableTypes.csv  ESDLCleaner.py  GraphMatchTest.py
src/Topology_Generator/: AllianderGeoDataNetworkParser.py  EnexisGeoDataNetworkParser.py  EsdlHelperFunctions.py  EsdlNetworkParser.py  GeoDataNetworkParser.py  GeometryHelperFunctions.py  Logging.py  LvNetworkBuilder.py  LvNetworkPlotter.py  MvEnergySystemBuilder.py  MvNetworkBuilder.py  NeighbourhoodArchetypeHandler.py  NetworkParser.py  NetworkPlotter.py  TopologyAnalyzer.py  dataclasses.py
test/: TestGeoDataNetworkParser.py  TestLvNetworkBuilder.py  TestMvEnergySystemBuilder.py  TestMvNetworkBuilder.py  TestTemplate.py
