[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Topology_Generator"
version = "0.0.1"
authors = [
  { name="Leo van Schooten", email="l.g.t.v.schooten@tue.nl" },
]
dependencies = [
    'matplotlib==3.9.0',
    'shapely==2.0.4',
    'geopandas==1.0.0',
    'networkx==3.3'
]
description = "A package to generate dutch electricity grid topologies"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"